chore: fix sonar
