# server/docs/swagger.yaml
@@ -91,33 +91,6 @@ definitions:
       unit_price:
         type: string
     type: object
-  data.OrderDetailVO:
-    properties:
-      asset:
-        $ref: '#/definitions/data.AssetVO'
-      created_at:
-        type: integer
-      order_id:
-        type: string
-      order_no:
-        type: string
-      pay_amount:
-        type: string
-      pay_currency:
-        type: string
-      payment_id:
-        type: string
-      quantity:
-        type: string
-      quote_id:
-        type: string
-      status:
-        type: string
-      unit_price:
-        type: string
-      updated_at:
-        type: integer
-    type: object
   data.OrderListVO:
     properties:
       items:
@@ -359,7 +332,7 @@ paths:
             - $ref: '#/definitions/data.BaseResponse'
             - properties:
                 data:
-                  $ref: '#/definitions/data.OrderDetailVO'
+                  $ref: '#/definitions/data.OrderVO'
               type: object
         "401":
           description: Unauthorized
